# workflow-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  readme_cn.md  rustc-ice-2025-07-28T09_09_16-81232.txt  rustc-ice-2025-07-29T01_13_12-91490.txt  rustc-ice-2025-07-29T01_16_58-91936.txt  rustc-ice-2025-07-29T01_17_33-92134.txt  rustc-ice-2025-07-29T01_25_22-92707.txt
data/: a.json  demo.json  g.json  http_example.json
docs/: http_node_improvements.md  http_node_usage.md
examples/: branch_example.rs  create_graph.rs  graph_exp.rs  http_node_example.rs  node_builder_example.rs  openai_exp.rs  openai_sdk.rs  orchestration_example.rs  parellel_exp.rs  repeat_example.rs  wf_example.rs
flow-data/: Cargo.toml
flow-data/src/: data.rs  lib.rs  output.rs  types.rs
model-client/: Cargo.toml
model-client/src/: error.rs  lib.rs
model-client/src/clients/: openai.rs
model-client/src/sdk/: openai.rs
model-client/src/traits/: core.rs  mod.rs
src/: error.rs  lib.rs  runner copy 2.rs  runner copy.rs  runner.rs  runner_old.rs  types.rs
src/edge/: mod.rs
src/graph/: mod copy.rs  mod.rs
src/inputs/: mod.rs  repository.rs
src/mcp/: mod.rs  registry.rs
src/model/: context.rs  data_payload copy.rs  data_payload.rs  graph_data.rs  input.rs  mod.rs  node.rs  output.rs
src/node/: base.rs  builder copy.rs  builder.rs  config.rs  executable copy.rs  executable.rs  handler.rs  mod.rs  processor.rs
src/node/components/: aggregator.rs  branch.rs  mod.rs
src/node/control/: aggregator.rs  branch.rs  mod.rs  parallel.rs  repeat.rs  subgraph.rs
src/node/data/: http.rs  indentity.rs  input.rs  llm.rs  mcp.rs  mod.rs  prompt.rs
src/node/orchestration/: aggregator.rs  branch.rs  mod.rs  parallel.rs  repeat.rs  subgraph.rs  transformer.rs
src/node/task/: mod.rs  prompt.rs
src/processor/: mod.rs  registry.rs  traits.rs
src/processor/implementations/: logging.rs  validation.rs
src/processor/processors/: mod.rs
src/storage/: mock.rs  mod.rs
src/utils/: mod.rs  runner_util.rs  stream_util.rs
workflow-error/: Cargo.toml
workflow-error/src/: lib.rs
workflow-utils/: Cargo.toml
workflow-utils/src/: lib.rs  serde_util.rs  stream_util.rs
workflow_macro/: Cargo.toml
workflow_macro/src/: lib.rs
workflow_macros/: Cargo.toml
