[package]
name = "workflow-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "workflow_macro",
    "model-client",
    "workflow-error",
    "workflow-utils",
    "flow-data",
]

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
uuid = { version = "1.17", features = ["v4"] }
futures-util = "0.3"
service_utils_rs = { version = "0.3.20", features = ["request"] }

[dependencies]
workflow_macro = { path = "./workflow_macro" }
model-client = { path = "./model-client" }
workflow-error = { path = "./workflow-error" }
workflow-utils = { path = "./workflow-utils" }
flow-data = { path = "./flow-data" }

serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
once_cell.workspace = true
uuid.workspace = true
futures-util.workspace = true
service_utils_rs.workspace = true
bytes.workspace = true
