[package]
name = "workflow-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "workflow_macro",
    "workflow-error",
    "workflow-utils",
    "flow-data",
]

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
uuid = { version = "1.17", features = ["v4"] }
futures-util = "0.3"
mcp-core = { package = "mcp-core-rs", version = "0.1.0" }
mcp-client = { package = "mcp-client-rust", version = "0.1.1" }
mcp-transport = { package = "mcp-transport-rs", version = "0.1.0" }
mcp-error = { package = "mcp-error-rs", version = "0.1.0" }
model-gateway-rs = { version = "0.1.6" }
toolcraft-request = { version = "0.2.2" }

[dependencies]
workflow_macro = { path = "./workflow_macro" }
workflow-error = { path = "./workflow-error" }
workflow-utils = { path = "./workflow-utils" }
flow-data = { path = "./flow-data" }

serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
once_cell.workspace = true
uuid.workspace = true
futures-util.workspace = true
bytes.workspace = true
mcp-client = { workspace = true }
mcp-transport = { workspace = true }
mcp-core = { workspace = true }
model-gateway-rs = { workspace = true }
toolcraft-request = { workspace = true }
serde_urlencoded = "0.7"
